# DSSD

./: .env  .gitignore  .project  README.md  build.sh  compose.yml  django-deployment.yml  django-hpa.yml  django-ingress.yml  django-service.yml  dssd_20240901_1302.bos  dssd_20241003_1528.bos  openapi.yaml  pom.xml  postgres-deployment.yml  postgres-secret.yml  pyproject.toml  render.yaml  requirements.txt  stress-test.sh
app/: .env  .gitignore  .project  Dockerfile  docker-compose.yml  entrypoint.sh  pom.xml  requirements.txt  settings.py
app/app/: Dockerfile  init.sql  settings.py  urls.py
app/diagrams/: 1_ Caraga de recoleccion-1.0.proc  Recoleccion y entrega de materiales-1.0.proc  Recolectores-1.0.proc
app/ecocycle/: admin.py  apps.py  forms.py  models.py  package-lock.json  package.json  tailwind.config.js  urls.py  views.py
app/ecocycle/helpers/: auth.py
app/ecocycle/migrations/: 0001_initial.py  0002_administrador_centro_deposito_punto_recolector_and_more.py  0002_administrador_username_recolector_username.py  0002_pedido.py  0002_recoleccion_case_id.py  0002_sorteo.py  0003_alter_pedido_material.py  0003_punto_materiales.py  0003_recoleccion_aprobada_centromaterial_and_more.py  0004_recoleccion_notificacion.py  0004_rename_fecha_pedido_fecha_creacion_and_more.py  0004_rename_id_global_pedido_id_centro_and_more.py  (+7 more)
app/organizations/: ACME.xml  Organization.xml
ecocycle/: urls.py
ecocycle/models/: material.py  punto.py
ecocycle/urls_/: centro_urls.py  login_urls.py  recolector_urls.py
ecocycle/views/: materials_views.py
(+76 files in other folders)
