[tool.poetry]
name = "dssd"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Grupo 1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "==5.1"
python-dotenv = "==1.0.1"
django-browser-reload = "==1.15.0"
psycopg-binary = "==3.2.3"
djangorestframework = "==3.15.2"
djangorestframework-simplejwt = "==5.3.1"
psycopg2 = "^2.9.9"
requests = "==2.32.3"
poetry-dotenv = "^0.4.0"
asgiref = "==3.8.1"
certifi = "==2024.8.30"
charset-normalizer = "==3.3.2"
idna = "==3.10"
psycopg = "==3.2.3"
PyJWT = "==2.9.0"
sqlparse = "==0.5.1"
typing_extensions = "==4.12.2"
urllib3 = "==2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
